--- a/services.html
+++ b/services.html
@@ -53,12 +53,12 @@
         <h4 class="tittle">we provide outdoor recreation activities🎉</h4>
         <div class="row">
          <div class="col-2">
-         <video width="100%" src="/videos/boat.mp4">
+         <video width="100%" src="/videos/boat.mp4" controls autoplay muted>
              your browser does not support the video tag
          </video>
          </div>
          <div class="col-2">
-        <video width="100%" src="/videos/dance.mp4">
+        <video width="100%" src="/videos/dance.mp4" controls autoplay muted>
             your browser does not support the video tag
         </video>
          </div>
@@ -68,12 +68,12 @@
       <div class="container">
         <div class="row">
          <div class="col-2">
-         <video width="100%" src="/videos/colorfull.mp4">
+         <video width="100%" src="/videos/colorfull.mp4" controls autoplay muted>
              your browser does not support the video tag
          </video>
          </div>
          <div class="col-2">
-        <video width="100%" src="/videos/rocks.mp4">
+        <video width="100%" src="/videos/rocks.mp4" controls autoplay muted>
             your browser does not support the video tag
         </video>
          </div>
