--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
     </div>
        
     <div class="container">
-        <h4 class="tittle">We provide outdoor recreayion activitie😃</h4>
+        <h4 class="tittle beenlow">We provide outdoor recreayion activitie😃</h4>
         <div class="boxess">
             <div class="row">
                 <div class="col-2 box box-one">
